# Netology-Diplom-2

./: .gitignore  CMakeLists.txt  README.md  main.cpp
lib/: air_vehicle.h  allterrain_boots.cpp  allterrain_boots.h  broom.cpp  broom.h  camel.cpp  camel.h  camel_runner.cpp  camel_runner.h  centaur.cpp  centaur.h  eagle.cpp  eagle.h  game.cpp  game.h  game_status.h  ground_vehicle.h  magic_carpet.cpp  magic_carpet.h  reduce_ratio.cpp  reduce_ratio.h  results.cpp  results.h  v_parameters.h  vehicle.cpp  vehicle.h
